--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
 
+        <link rel="stylesheet" href="assets/vendor/owl/owl.carousel.min.css">
+        <link rel="stylesheet" href="assets/vendor/owl/owl.theme.default.css">
         <!-- Bootstrap CSS v5.0.2 -->
         <link rel="stylesheet"
             href="assets/vendor/bootstrap-5.0.2/css/bootstrap.min.css"
         />
         <link rel="stylesheet" href="assets/dist/style.css">
+    </head>
+        <link rel="stylesheet" href="assets/dist/responsive.css">
     </head>
 
     <body>
@@ -199,22 +203,84 @@
                 <div class="container">
                     <div class="title">What’s our Valuable <br> client say</div>
 
-                    <div class="items_card">
-                        <div class="head">
-                            <div>
-                                <img src="assets/images/qoute.svg" alt="">
-                            </div>
-                            <div class="details">
-                                Our journey with Web3 digital marketing has been nothing short of transformative. Transitioning from traditional methods to this decentralized approach felt daunting initially, but the results speak volumes.
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="items_card">
+                                <div class="head">
+                                    <div>
+                                        <img style="width: 50px;" src="assets/images/qoute.svg" alt="">
+                                    </div>
+                                    <div class="details">
+                                        Our journey with Web3 digital marketing has been nothing short of transformative. Transitioning from traditional methods to this decentralized approach felt daunting initially, but the results speak volumes.
+                                    </div>
+                                </div>
+                                <div class="footer">
+                                    <img src="assets/images/222c85e6c852819bc5d4b24a87a87fb6.png" alt="">
+                                    <div class="info">
+                                        <h3>John Doe</h3>
+                                        <p>UI/UX Designer</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="footer">
-                            <img src="assets/images/222c85e6c852819bc5d4b24a87a87fb6.png" alt="">
-                            <div class="info">
-                                <h3>John Doe</h3>
-                                <p>UI/UX Designer</p>
+                        <div class="item">     
+                            <div class="items_card">
+                            <div class="head">
+                                <div>
+                                    <img style="width: 50px;" src="assets/images/qoute.svg" alt="">
+                                </div>
+                                <div class="details">
+                                    Our journey with Web3 digital marketing has been nothing short of transformative. Transitioning from traditional methods to this decentralized approach felt daunting initially, but the results speak volumes.
+                                </div>
+                            </div>
+                            <div class="footer">
+                                <img src="assets/images/c98ecb3ec92ac86805fe55581fbeaa60.png" alt="">
+                                <div class="info">
+                                    <h3>Kane William</h3>
+                                    <p>Creative Director</p>
+                                </div>
                             </div>
                         </div>
+                     </div>
+                    <div class="item">     
+                            <div class="items_card">
+                            <div class="head">
+                                <div>
+                                    <img style="width: 50px;" src="assets/images/qoute.svg" alt="">
+                                </div>
+                                <div class="details">
+                                    Our journey with Web3 digital marketing has been nothing short of transformative. Transitioning from traditional methods to this decentralized approach felt daunting initially, but the results speak volumes.
+                                </div>
+                            </div>
+                            <div class="footer">
+                                <img src="assets/images/9b949267cc8214b6727067c4a13af4b4.png" alt="">
+                                <div class="info">
+                                    <h3>Matt Kelvin</h3>
+                                    <p>Sr. Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">     
+                            <div class="items_card">
+                            <div class="head">
+                                <div>
+                                    <img style="width: 50px;" src="assets/images/qoute.svg" alt="">
+                                </div>
+                                <div class="details">
+                                    Our journey with Web3 digital marketing has been nothing short of transformative. Transitioning from traditional methods to this decentralized approach felt daunting initially, but the results speak volumes.
+                                </div>
+                            </div>
+                            <div class="footer">
+                                <img src="assets/images/9b949267cc8214b6727067c4a13af4b4.png" alt="">
+                                <div class="info">
+                                    <h3>Matt Kelvin</h3>
+                                    <p>Sr. Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                      
                     </div>
                 </div>
             </section>
@@ -442,9 +508,9 @@
         </main>
         <footer>
             <div class="container">
-                <div class="content d-flex justify-content-between align-items-center">
+                <div class="content d-flex justify-content-between align-items-center flex-wrap">
                     <div class="left">
-                        <a href="">
+                        <a style="display: inline;" href="">
                             <img src="assets/images/Group.svg" alt="">
                             <span>tublot</span>
                         </a>
@@ -497,7 +563,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="creadit d-flex justify-content-between">
+                <div class="creadit d-flex justify-content-between flex-wrap">
                     <div>&copy; &nbsp;&nbsp;2024 &nbsp;&nbsp; All Rights Reserved</div>
                     <div>Designed By Manab Sikder</div>
                 </div>
@@ -506,7 +572,9 @@
             <!-- place footer here -->
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
+        <script src="assets/vendor/jquery/jquery.min.js"></script>
         <script src="assets/vendor/bootstrap-5.0.2/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/vendor/owl/owl.carousel.min.js"></script>
         <script src="assets/dist/main.js"></script>
       
     </body>
